# popsim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  deploy.ps1
resources/: resources.rc.in
resources/data/: conf.json  names.json
src/: main.cpp
src/core/: citizen.hpp  event.hpp  settlement.hpp  simengine.cpp  simengine.hpp  worldgen.hpp
src/lib/: citizen.cpp  citizen.hpp  events.hpp  fs.cpp  fs.hpp  math.hpp  rng.hpp  types.hpp  world.hpp
src/lib/encoder/: sha256.hpp
src/lib/ui/dialogs/citizenInfo/: citizenInfo.ui
src/lib/ui/dialogs/newWorld/: newWorld.cpp  newWorld.hpp  newWorld.ui  newWorld.ui.h
src/lib/ui/dialogs/settlementInfo/: settlementInfo.ui
src/lib/ui/windows/: MainWindow.cpp  MainWindow.hpp  mainwindow.ui  mainwindow.ui.h
